# thingamaboard_v2

./: README.md
CAD/: 1U-keycap.SLDPRT  M3_bolt_10mm.SLDPRT  case_bottom.SLDPRT  case_bottom.STEP  case_bottom_v2.SLDPRT  keyboard.SLDASM  keyboard_assembly.SLDDRW  keyboard_assembly_2.SLDASM  top_case.SLDPRT  top_case.STEP  top_case_v2.SLDPRT  top_case_v3.SLDDRW  top_case_v3.SLDPRT
CAD/keycaps/: LICENSE.txt
CAD/outputs/: case_bottom.STEP  case_bottom_v2.STEP  case_bottom_v2.STL  top_case.STEP  top_case_v2.STEP  top_case_v3.STEP  top_case_v3.STL
firmware/: Cargo.toml
firmware/.cargo/: config.toml
firmware/src/: key_codes.rs  key_layers.rs  key_scan.rs  main.rs
layout/: case_outlines.dxf  ergogen_layout.yaml  key_layout.dxf  pcb_layout.dwg  pcb_layout.dxf  plate_shape.dwg  plate_shape.dxf  proof_of_concept.SLDASM  visualisation.SLDPRT
pcb/: MCU.kicad_sch  connectors.kicad_sch  inputs.kicad_sch  keyboard.kicad_pcb  keyboard.kicad_pro  keyboard.kicad_sch  power.kicad_sch  stm32.kicad_sch
pcb/local-library/: SW_PG1350.kicad_mod  TYPE-C-31-M-12.kicad_mod  monkei.kicad_mod  monkei_but_smaller.kicad_mod  rust_crab.kicad_mod
pcb/models/: kailh_choc_switch.STEP
pcb/production/: keyboard-B_Cu.gbr  keyboard-B_Mask.gbr  keyboard-B_Paste.gbr  keyboard-B_Silkscreen.gbr  keyboard-Edge_Cuts.gbr  keyboard-F_Cu.gbr  keyboard-F_Mask.gbr  keyboard-F_Paste.gbr  keyboard-F_Silkscreen.gbr  keyboard-NPTH-drl_map.gbr  keyboard-NPTH.drl  keyboard-PTH-drl_map.gbr  keyboard-PTH.drl  keyboard-bottom-pos.csv  keyboard-job.gbrjob  keyboard-top-pos.csv  keyboard.csv  keyboard.xml
(+18 files in other folders)
