[package]
name = "thingamaware"
version = "0.1.0"
edition = "2021"

[dependencies]
embassy-executor = { version = "0.6", features = ["arch-cortex-m", "executor-thread", "defmt", "integrated-timers"] }
embassy-time = { version = "0.3", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-rp = { version = "0.2", features = ["defmt", "time-driver"] }
embassy-usb = { version = "0.3.0", features = ["defmt"] }
embassy-futures = { version = "0.1.0" }

usbd-hid = "0.8.1"

cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.3"
critical-section = "1.1"

defmt = "0.3.5"
defmt-rtt = "0.4.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }